# Language-and-AI-Principles-by-Ryu-Hemingway

./: .gitattributes  .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  HOWTO.md  LICENSE  README.md  SECURITY.md  brief.py  config.example.json  learn.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: leetcode_catalog.json
docs/: cloud-api-keys.md  configuration.md  daily-brief.md  development.md  leetcode.md  local-llms.md  principles-of-ai.md  programming-track.md
docs/course-content/: README.md  ai-agents.md  ai-data-engineering.md  ai-embeddings.md  ai-harnesses.md  ai-llm-fundamentals.md  ai-locallm.md  ai-ml-basics.md  ai-mlops.md  ai-prompting.md  ai-rag.md  ai-safety.md  ai-transformers.md  programming-c.md  programming-java.md  programming-python.md
docs/principles/: agentic-workflows.md  data-engineering.md  embeddings.md  harnesses.md  llm-fundamentals.md  local-llm-fundamentals.md  ml-basics.md  mlops.md  prompting.md  rag.md  safety.md  transformers.md
scripts/: check_generated_docs.sh  demo.sh  export_course_content.py  generate_docs_media.py  install.sh  terminal_smoke.py
tests/: test_curriculum_integrity.py
